add responsive header

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <script src="https://kit.fontawesome.com/bc42e2820a.js" crossorigin="anonymous"></script>
 </head>
 <body class="debug">
-    <header>
+    <header class="header">
         <div class="container-md">
             <div class="row">
                 <div class="col d-flex justify-content-between">
                     <a href="#">Start bootstrap</a>
                     <nav>
-                        <div class="hambuger">
+                        <div class="hambuger d-md-none">
                             <i class="fa-solid fa-bars"></i>
                         </div>
     
-                        <ul class="nav-list d-none">
+                        <ul class="nav-list d-none d-md-flex">
                             <li><a href="#"></a>Portfolio</li>
                             <li><a href="#"></a>About</li>
                             <li><a href="#"></a>Contact</li>
