add some coments to html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/bc42e2820a.js" crossorigin="anonymous"></script>
 </head>
 <body class="debug">
+    <!-- inizio header section  -->
     <header class="header">
         <div class="container-md">
             <div class="row">
@@ -29,6 +30,8 @@
             </div>
         </div>
     </header>
+    <!-- fine header section  -->
+    <!-- inizio hero section  -->
     <section class="hero">
         <div class="container">
             <div class="row">
@@ -51,6 +54,12 @@
             </div>
         </div>
     </section>
+    <!-- fine hero section  -->
+    <!-- inizio portfolio section  -->
+    <section class="portfolio-section">
+
+    </section>
+     <!-- fine portfolio section  -->
     
 </body>
 </html>
