--- a/index.html
+++ b/index.html
@@ -57,6 +57,33 @@
     <!-- fine hero section  -->
     <!-- inizio portfolio section  -->
     <section class="portfolio-section">
+        <div class="container-md">
+            <div class="row row-gap-3">
+                <div class="section-title text-center">
+
+                    <h2>Portfolio</h2>
+                    <div><i class="fa-solid fa-star"></i></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 ">
+                    <img class="rounded" src="./img/cabin.png" alt="">
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 ">
+                    <img class="rounded" src="./img/cake.png" alt="">
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 ">
+                    <img class="rounded" src="./img/circus.png" alt="">
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 ">
+                    <img class="rounded" src="./img/game.png" alt="">
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 ">
+                    <img class="rounded" src="./img/safe.png" alt="">
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 ">
+                    <img class="rounded" src="./img/submarine.png" alt="">
+                </div>
+            </div>
+        </div>
 
     </section>
      <!-- fine portfolio section  -->
