--- a/index.html
+++ b/index.html
@@ -87,6 +87,23 @@
 
     </section>
      <!-- fine portfolio section  -->
+     <!-- inzio about section  -->
+    <section class="about-section">
+        <div class="container">
+            <div class="row">
+                <div class="about-title text-center">
+
+                    <h2>About</h2>
+                    <div><i class="fa-solid fa-star"></i></div>
+                </div>
+
+                <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, aliquam aliquid magni debitis omnis a esse, minus aut possimus, numquam voluptates quisquam natus autem doloribus.</div>
+                <div class="col-12 col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, natus eaque. Saepe repellendus, nisi eveniet fuga fugiat porro, necessitatibus harum quod, accusantium quae dolorum quas!</div>
+                <a class="button text-center " href="#"><i class="fa-solid fa-download"></i>Download</a>
+            </div>
+        </div>
+    </section>
+     <!-- fine about section  -->
     
 </body>
 </html>
