contact-me section html skeleton

--- a/index.html
+++ b/index.html
@@ -104,6 +104,32 @@
         </div>
     </section>
      <!-- fine about section  -->
+     <!-- inizio contact me section  -->
+    <section class="contant-me-section">
+        <div class="container">
+            <div class="row">
+                <div class="contact-me-title text-center">
+
+                    <h2>About</h2>
+                    <div><i class="fa-solid fa-star"></i></div>
+                </div>
+                <form>
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="Email Address">
+                    <input type="tel" placeholder="Phone Number">
+                    <textarea
+						name=""
+						id=""
+						cols="30"
+						rows="10"
+						placeholder="Message">
+					</textarea>
+                    <a href="#" class="button">Send</a>
+                </form>
+
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
