--- a/index.html
+++ b/index.html
@@ -110,22 +110,25 @@
             <div class="row">
                 <div class="contact-me-title text-center">
 
-                    <h2>About</h2>
+                    <h2>Contact Me</h2>
                     <div><i class="fa-solid fa-star"></i></div>
                 </div>
-                <form>
-                    <input type="text" placeholder="Name">
-                    <input type="email" placeholder="Email Address">
-                    <input type="tel" placeholder="Phone Number">
-                    <textarea
-						name=""
-						id=""
-						cols="30"
-						rows="10"
-						placeholder="Message">
-					</textarea>
-                    <a href="#" class="button">Send</a>
-                </form>
+                <div class="col-12">
+                    <form class="d-flex  flex-column">
+                        <input type="text" placeholder="Name">
+                        <input type="email" placeholder="Email Address">
+                        <input type="tel" placeholder="Phone Number">
+                        <textarea
+                            name=""
+                            id=""
+                            cols="30"
+                            rows="10"
+                            placeholder="Message">
+                        </textarea>
+                        <a href="#" class="button">Send</a>
+                    </form>
+
+                </div>
 
             </div>
         </div>
