--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <h2>Contact Me</h2>
                     <div><i class="fa-solid fa-star"></i></div>
                 </div>
-                <div class="col-12">
+                <div class="col-12 col-md-10 .offset-md-1 ">
                     <form class="d-flex  flex-column">
                         <input type="text" placeholder="Name">
                         <input type="email" placeholder="Email Address">
