--- a/index.html
+++ b/index.html
@@ -143,6 +143,50 @@
         </div>
     </section>
       <!-- fine contact me section  -->
+      <!-- inizio footer section  -->
+    <footer>
+        <section class="footer-main">
+
+            <div class="container-md">
+                <div class="row  text-center">
+                    <div class="col-12 col-md-4">
+                        <div class="location">
+                            <h5>Location</h5>
+                            <address>2215 John Daniel Drive Clark,MO 54243</address>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="social">
+                            <h5>Around The Web</h5>
+                            <span>
+                                <i class="fa-brands fa-facebook-f"></i>
+                                <i class="fa-brands fa-google-plus-g"></i>
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-linkedin"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="freelancer">
+                            <h5>About Freelancer</h5>
+                            <p>Freellance is a free to use,open sorcer Bootstap theme creater by<span>Start Bootstrap</span></p>
+                        </div>
+    
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="footer-copywrite">
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col">
+
+                    <p class="text-center">Copywrite @ Your Website 2019</p>    
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>  
     
 </body>
 </html>
