--- a/index.html
+++ b/index.html
@@ -129,17 +129,16 @@
                     </div>
                     <div class="col-10 ">
                         <form class="d-flex  flex-column">
-                            <input type="text" placeholder="Name">
-                            <input type="email" placeholder="Email Address">
-                            <input type="tel" placeholder="Phone Number">
+                            <input type="text" name="name" placeholder="Name">
+                            <input type="email" name="email" placeholder="Email Address">
+                            <input type="tel" name="tel" placeholder="Phone Number">
                             <textarea
-                                name=""
-                                id=""
+                                name="message"
                                 cols="30"
                                 rows="10"
                                 placeholder="Message">
                             </textarea>
-                            <a href="#" class="button">Send</a>
+                            <button>Send</button>
                         </form>
     
                     </div>
