--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                                
                                 <!-- after  -->
                             </div>
-                            <ul class="d-flex justify-content-center gap-3 fs-4 text-uppercase">
-                                <li>Graphic Artist</li>
-                                <li>Web Designer</li>
-                                <li>Illustrator</li>
+                            <ul class="tags d-flex justify-content-center gap-3 fs-4 text-uppercase">
+                                <li class="tag">Graphic Artist</li>
+                                <li class="tag">Web Designer</li>
+                                <li class="tag">Illustrator</li>
                             </ul>
     
                         </div>
