add placeholder color

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                             <textarea
                                 class="border-0 border-bottom"
                                 name="message"
+                                placeholder="message"
                                 cols="30"
                                 rows="10">
                             </textarea>
